--- a/ChessProject-PHP/composer.json
+++ b/ChessProject-PHP/composer.json
@@ -7,10 +7,21 @@
         {
             "name": "LogicNow development team",
             "email": "info@maxfocus.com"
+        },
+        {
+            "name": "Drew Hunter",
+            "email": "drewdhunter@gmail.com",
+            "role": "Developer"
         }
     ],
     "require": {
-        "phpunit/phpunit": "4.5.0"
+        "php": ">=5.6.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "5.0.*"
+    },
+    "config": {
+        "bin-dir": "bin"
     },
     "autoload": {
         "psr-0": { "LogicNow\\": "src/" },
