Add travis support

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
             "email": "info@maxfocus.com"
         },
         {
-            "name": "Drew Hunter",
-            "email": "drewdhunter@gmail.com",
+            "name": "DDHun",
+            "email": "ddhun180@gmail.com",
             "role": "Developer"
         }
     ],
