--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "php": ">=5.6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.0.*"
+        "phpunit/phpunit": "5.0.*",
+        "phpmd/phpmd": "2.3.*",
+        "squizlabs/php_codesniffer": "2.*"
     },
     "config": {
         "bin-dir": "bin"
